[gd_scene load_steps=92 format=3 uid="uid://d0bm7l2vqqtww"]

[ext_resource type="Texture2D" uid="uid://bwphxfnrrrqup" path="res://Assets/Animated_16x16/Enemy_16x16/Zombie_1_sheet_complete_48x48.png" id="1_c5015"]
[ext_resource type="Script" path="res://Scripts/zombie.gd" id="1_wwnh1"]
[ext_resource type="Texture2D" uid="uid://fytc1i4qq5gl" path="res://Assets/Spooky_FULL/16x16/Animated_16x16/Enemies_16x16/Zombie_1_sheet_complete_16x16.png" id="2_pq83d"]
[ext_resource type="PackedScene" uid="uid://dw222f1ni5he0" path="res://Scenes/hitzone.tscn" id="3_uqgyq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lf7ln"]
atlas = ExtResource("2_pq83d")
region = Rect2(128, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_01bgc"]
atlas = ExtResource("2_pq83d")
region = Rect2(144, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecsqx"]
atlas = ExtResource("2_pq83d")
region = Rect2(160, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4f2n"]
atlas = ExtResource("2_pq83d")
region = Rect2(176, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1wnk"]
atlas = ExtResource("2_pq83d")
region = Rect2(224, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwjkd"]
atlas = ExtResource("2_pq83d")
region = Rect2(240, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmtyf"]
atlas = ExtResource("2_pq83d")
region = Rect2(256, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_py00b"]
atlas = ExtResource("2_pq83d")
region = Rect2(272, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq4v8"]
atlas = ExtResource("2_pq83d")
region = Rect2(32, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_adas5"]
atlas = ExtResource("2_pq83d")
region = Rect2(48, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1bmq"]
atlas = ExtResource("2_pq83d")
region = Rect2(64, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhx8j"]
atlas = ExtResource("2_pq83d")
region = Rect2(80, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwgti"]
atlas = ExtResource("2_pq83d")
region = Rect2(320, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0k6k0"]
atlas = ExtResource("2_pq83d")
region = Rect2(336, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_frv6u"]
atlas = ExtResource("2_pq83d")
region = Rect2(352, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiisc"]
atlas = ExtResource("2_pq83d")
region = Rect2(368, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfyup"]
atlas = ExtResource("1_c5015")
region = Rect2(64, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7nga"]
atlas = ExtResource("1_c5015")
region = Rect2(80, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_odl28"]
atlas = ExtResource("1_c5015")
region = Rect2(48, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_85j6o"]
atlas = ExtResource("1_c5015")
region = Rect2(112, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qn2f5"]
atlas = ExtResource("1_c5015")
region = Rect2(128, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoip8"]
atlas = ExtResource("1_c5015")
region = Rect2(96, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u6rh"]
atlas = ExtResource("1_c5015")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl1n0"]
atlas = ExtResource("1_c5015")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_73mox"]
atlas = ExtResource("1_c5015")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrutb"]
atlas = ExtResource("1_c5015")
region = Rect2(160, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfj1t"]
atlas = ExtResource("1_c5015")
region = Rect2(176, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j5ka"]
atlas = ExtResource("1_c5015")
region = Rect2(144, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypkcv"]
atlas = ExtResource("2_pq83d")
region = Rect2(96, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71bq"]
atlas = ExtResource("2_pq83d")
region = Rect2(112, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_op46c"]
atlas = ExtResource("2_pq83d")
region = Rect2(128, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ntwm"]
atlas = ExtResource("2_pq83d")
region = Rect2(144, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fujr"]
atlas = ExtResource("2_pq83d")
region = Rect2(192, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tadej"]
atlas = ExtResource("2_pq83d")
region = Rect2(208, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6apop"]
atlas = ExtResource("2_pq83d")
region = Rect2(224, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgxoc"]
atlas = ExtResource("2_pq83d")
region = Rect2(240, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_scf7g"]
atlas = ExtResource("2_pq83d")
region = Rect2(0, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvqia"]
atlas = ExtResource("2_pq83d")
region = Rect2(16, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xc36i"]
atlas = ExtResource("2_pq83d")
region = Rect2(32, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv1u6"]
atlas = ExtResource("2_pq83d")
region = Rect2(48, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0sbw"]
atlas = ExtResource("2_pq83d")
region = Rect2(288, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh7ab"]
atlas = ExtResource("2_pq83d")
region = Rect2(304, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4o1m"]
atlas = ExtResource("2_pq83d")
region = Rect2(320, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwd5w"]
atlas = ExtResource("2_pq83d")
region = Rect2(336, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_scox5"]
atlas = ExtResource("1_c5015")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkogf"]
atlas = ExtResource("1_c5015")
region = Rect2(112, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dcpv"]
atlas = ExtResource("1_c5015")
region = Rect2(128, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_igqhx"]
atlas = ExtResource("1_c5015")
region = Rect2(144, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u8a5"]
atlas = ExtResource("1_c5015")
region = Rect2(160, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_weffs"]
atlas = ExtResource("1_c5015")
region = Rect2(176, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_naaj5"]
atlas = ExtResource("1_c5015")
region = Rect2(192, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_34oax"]
atlas = ExtResource("1_c5015")
region = Rect2(208, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_unvk6"]
atlas = ExtResource("1_c5015")
region = Rect2(224, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnooo"]
atlas = ExtResource("1_c5015")
region = Rect2(240, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmui2"]
atlas = ExtResource("1_c5015")
region = Rect2(256, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqrnb"]
atlas = ExtResource("1_c5015")
region = Rect2(272, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_37yre"]
atlas = ExtResource("1_c5015")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3n47"]
atlas = ExtResource("1_c5015")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7rtb"]
atlas = ExtResource("1_c5015")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nldk"]
atlas = ExtResource("1_c5015")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cliw2"]
atlas = ExtResource("1_c5015")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh2mh"]
atlas = ExtResource("1_c5015")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1ycs"]
atlas = ExtResource("1_c5015")
region = Rect2(288, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jei3w"]
atlas = ExtResource("1_c5015")
region = Rect2(304, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yuur"]
atlas = ExtResource("1_c5015")
region = Rect2(320, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wqxr"]
atlas = ExtResource("1_c5015")
region = Rect2(336, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqo2w"]
atlas = ExtResource("1_c5015")
region = Rect2(352, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebgoc"]
atlas = ExtResource("1_c5015")
region = Rect2(368, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qlks"]
atlas = ExtResource("1_c5015")
region = Rect2(64, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvodh"]
atlas = ExtResource("1_c5015")
region = Rect2(80, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cd1il"]
atlas = ExtResource("1_c5015")
region = Rect2(96, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8ftk"]
atlas = ExtResource("1_c5015")
region = Rect2(112, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj3sm"]
atlas = ExtResource("1_c5015")
region = Rect2(128, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1gqp"]
atlas = ExtResource("1_c5015")
region = Rect2(144, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r73og"]
atlas = ExtResource("1_c5015")
region = Rect2(160, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcv4t"]
atlas = ExtResource("1_c5015")
region = Rect2(176, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb6jt"]
atlas = ExtResource("1_c5015")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_adfrf"]
atlas = ExtResource("1_c5015")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u58bq"]
atlas = ExtResource("1_c5015")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_odn8x"]
atlas = ExtResource("1_c5015")
region = Rect2(48, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0awvp"]
atlas = ExtResource("1_c5015")
region = Rect2(192, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw3c1"]
atlas = ExtResource("1_c5015")
region = Rect2(208, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sw4vv"]
atlas = ExtResource("1_c5015")
region = Rect2(224, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntscs"]
atlas = ExtResource("1_c5015")
region = Rect2(240, 32, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rnc3s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf7ln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01bgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecsqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4f2n")
}],
"loop": false,
"name": &"dieD",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1wnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwjkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmtyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_py00b")
}],
"loop": false,
"name": &"dieL",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq4v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adas5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1bmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhx8j")
}],
"loop": false,
"name": &"dieR",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwgti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k6k0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frv6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiisc")
}],
"loop": true,
"name": &"dieU",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfyup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7nga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odl28")
}],
"loop": false,
"name": &"hitdown",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85j6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qn2f5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoip8")
}],
"loop": false,
"name": &"hitleft",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u6rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl1n0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73mox")
}],
"loop": false,
"name": &"hitright",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrutb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfj1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j5ka")
}],
"loop": false,
"name": &"hitup",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypkcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op46c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ntwm")
}],
"loop": false,
"name": &"hurtD",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fujr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tadej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6apop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgxoc")
}],
"loop": false,
"name": &"hurtL",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_scf7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvqia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc36i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv1u6")
}],
"loop": false,
"name": &"hurtR",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0sbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh7ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4o1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwd5w")
}],
"loop": false,
"name": &"hurtU",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_scox5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkogf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dcpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igqhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u8a5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_weffs")
}],
"loop": true,
"name": &"idle_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_naaj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34oax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unvk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnooo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmui2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqrnb")
}],
"loop": true,
"name": &"idle_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_37yre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3n47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7rtb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nldk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cliw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh2mh")
}],
"loop": true,
"name": &"idle_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1ycs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jei3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yuur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wqxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqo2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebgoc")
}],
"loop": true,
"name": &"idle_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qlks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvodh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cd1il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8ftk")
}],
"loop": true,
"name": &"mdown",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj3sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1gqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r73og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcv4t")
}],
"loop": true,
"name": &"mleft",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb6jt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adfrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u58bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odn8x")
}],
"loop": true,
"name": &"mright",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0awvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw3c1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sw4vv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntscs")
}],
"loop": true,
"name": &"mup",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h43b8"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0dkyx"]
size = Vector2(10, 10)

[node name="Zombie" type="CharacterBody2D"]
motion_mode = 1
wall_min_slide_angle = 0.0
platform_on_leave = 2
script = ExtResource("1_wwnh1")

[node name="Anims" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_rnc3s")
animation = &"hurtD"
autoplay = "idle_down"

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_h43b8")

[node name="Hitzone" type="Area2D" parent="."]

[node name="hitbox" type="CollisionShape2D" parent="Hitzone"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_h43b8")

[node name="Hurtzone" parent="." instance=ExtResource("3_uqgyq")]
position = Vector2(0, 3)
collision_layer = 2

[node name="hurtbox" type="CollisionShape2D" parent="Hurtzone"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_0dkyx")
debug_color = Color(0.918849, 0.275239, 0.177732, 0.42)

[node name="cooldown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="resettimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="pathtimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_use_custom = true
debug_path_custom_color = Color(1, 0.815686, 0.00784314, 1)
debug_path_custom_point_size = 2.0

[node name="hurt_cooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="Hitzone" to="." method="_on_hitzone_area_entered"]
[connection signal="body_entered" from="Hitzone" to="." method="_on_hitzone_body_entered"]
[connection signal="body_entered" from="Hurtzone" to="." method="_on_hurtzone_body_entered"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="pathtimer" to="." method="_on_pathtimer_timeout"]
[connection signal="timeout" from="hurt_cooldown" to="." method="_on_hurt_cooldown_timeout"]
